# hexapod

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh  compile_commands.json  crosstool-ng-config  hexapod_body.skp  high_level_design.qmodel  main.cc  rpi2-toolchain.cmake
Main/src/: CMakeLists.txt  main.cc
ServoController/inc/: adafruit.h  adafruit.hpp  adafruit_i2c.hh  adafruit_servohat_driver.hpp
ServoController/src/: CMakeLists.txt  adafruit.c  adafruit.cpp  adafruit_i2c.cc  adafruit_servohat_driver.cpp  servo_driver.cpp
adafruit_servo_driver/inc/: adafruit_servohat_driver.hpp
adafruit_servo_driver/src/: adafruit_servohat_driver.cpp
kinematics/inc/: leg_ik.h
kinematics/src/: leg_ik.cpp
servo_controller/: servo_controller.kdev4
servo_controller/.kdev4/: servo_controller.kdev4
servo_controller/inc/: servo_controller.hpp
servo_controller/src/: servo_controller.cpp
utils/inc/: logging.h
